--- a/configs/ai_config.json
+++ b/configs/ai_config.json
@@ -1,6 +1,6 @@
 {
   "general": {
-    "projectName": "Rafoon AI",
+    "projectName": "ONIGRL AI",
     "version": "1.0.0",
     "description": "Configuration for AI agents on Solana Web3 network with autonomous evolution capabilities",
     "environment": "development", // Options: development, testing, production
